sandbox/output
ProfitGeneralize.java:9: error: cannot find symbol
                Example::calculateCosts);
                ^
  symbol:   variable Example
  location: class ProfitGeneralize
ProfitGeneralize.java:13: error: cannot find symbol
                Example::calculateRevenue);
                ^
  symbol:   variable Example
  location: class ProfitGeneralize
2 errors
